--- a/BenefíciosDoXadrez/Beneficios.html
+++ b/BenefíciosDoXadrez/Beneficios.html
@@ -5,9 +5,9 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Benefícios do Xadrez</title>
-        <link rel="stylesheet" href="/Referência/header.css">
-        <link rel="stylesheet" href="/BenefíciosDoXadrez/style.css">
-        <link rel="stylesheet" href="/Referência/footer.css">
+        <link rel="stylesheet" .href="/Referência/header.css">
+        <link rel="stylesheet" .href="/BenefíciosDoXadrez/style.css">
+        <link rel="stylesheet" .href="/Referência/footer.css">
     </head>
 
     <body>
@@ -18,7 +18,7 @@
             </button>
 
             <div class="logo"> 
-                <a href="#"><img class="img-logo" src="/Projeto feito/imagens/CavaloPrincipal.png" alt="erro"></a>
+                <a .href="#"><img class="img-logo" src="/Projeto feito/imagens/CavaloPrincipal.png" alt="erro"></a>
                 </div>
 
                 <div class="linksDoHeader" id="linksDoHeader">
@@ -35,10 +35,10 @@
                         <path d="M10.74 15.53L14.26 12L10.74 8.46997" stroke="white" stroke-width="3" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
 
-                    <a href="#"> Jogo </a>
-                    <a href="#">Notícias</a>
+                    <a .href="#"> Jogo </a>
+                    <a .href="#">Notícias</a>
                     <div class="barraVertical"></div>
-                    <a href="#"> Equipe </a>
+                    <a .href="#"> Equipe </a>
                 </div>
 
         </div>
@@ -97,12 +97,12 @@
     </div>
 
     <div class="div-footer">
-        <a  class="link-image"  href="https://instagram.com" target="_blank"><img class="img-footer" src="/Referência/imagens/logo-do-cone-do-instagram.png" alt="logo-instagram"></a>
-        <a  class="link-image" href="https://facebook.com" target="_blank"><img class="img-footer" src="/Referência/imagens/logo-face.png" alt="logo-facebook"></a>
-        <a  class="link-image" href="https://twitter.com" target="_blank"><img  class="img-footer"src="/Referência/imagens/logo-twitters.png" alt="logo-twitter"></a>
-        <a  class="link-image" href="https://whatsapp.com" target="_blank"><img class="img-footer" src="/Referência/imagens/logo-zap.png" alt="logo-whatsapp "></a>
-        <a  class="link-image" href="https://youtube.com" target="_blank"><img class="img-footer" src="/Referência/imagens/logo-youtube.png" alt="logo-youtube"></a>
-        <a  class="link-image" href="telegram.com" target="_blank"><img class="img-footer" src="/Referência/imagens/logo-telegram.png" alt="logo-telegram"></a>
+        <a  class="link-image"  .href="https://instagram.com" target="_blank"><img class="img-footer" src="/Referência/imagens/logo-do-cone-do-instagram.png" alt="logo-instagram"></a>
+        <a  class="link-image" .href="https://facebook.com" target="_blank"><img class="img-footer" src="/Referência/imagens/logo-face.png" alt="logo-facebook"></a>
+        <a  class="link-image" .href="https://twitter.com" target="_blank"><img  class="img-footer"src="/Referência/imagens/logo-twitters.png" alt="logo-twitter"></a>
+        <a  class="link-image" .href="https://whatsapp.com" target="_blank"><img class="img-footer" src="/Referência/imagens/logo-zap.png" alt="logo-whatsapp "></a>
+        <a  class="link-image" .href="https://youtube.com" target="_blank"><img class="img-footer" src="/Referência/imagens/logo-youtube.png" alt="logo-youtube"></a>
+        <a  class="link-image" .href="telegram.com" target="_blank"><img class="img-footer" src="/Referência/imagens/logo-telegram.png" alt="logo-telegram"></a>
     </div>
 </footer>
         
